[metadata]
name = bleanser_sean
version = 0.1.0
description = seanbreckenridge's bleanser modules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanbreckenridge/bleanser
author = Sean Breckenridge
author_email = seanbrecke@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = data

[options]
python_requires = >=3.10

[flake8]
ignore = E501,E402,W503,E266,E203

[mypy]
pretty = True
show_error_context = True
show_error_codes = True
check_untyped_defs = True
namespace_packages = True
disallow_incomplete_defs = True
no_implicit_optional = True
disallow_any_generics = True
disallow_untyped_calls = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
